test/analyze/name_resolution/invalid_wildcard_identifier_error.myte
module test

fun main() {
  val _ = 1;

  _;
  (_, _);
}